Añadido middleware para sacar los tags de la base de datos, url: anuncios/tags

--- a/views/usuarios_view.ejs
+++ b/views/usuarios_view.ejs
@@ -11,9 +11,8 @@
 	<% usuarios.forEach(function(usuario){
 	%>
 		<p>
-		Nombre: <%= usuario.nombre %>
+		Nombre: <%= usuario.username %>,
 		Email: <%= usuario.email %>
-		Password: <%= usuario.clave %>
 		</p>
 	<%
 	}) %>
