Editada página index de entrada a la app, añadido .jshintrc para resaltar sintaxis javascript, creado script de incialización con promesas, ERROR: hay que corregir los scripts porque han dejado de funcionar, puede ser un problema del package.json

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,16 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome! This API was created in order to improve the knowledge adquired on the Babelcamp.js course.</p>
+    <p>Technologies learned:</p>
+    <ul>
+    	<li>Node.js: JavaScript on the dark side.</li>
+    	<li>Express: minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.</li>
+    	<li>Mongo DB: With Mongoose</li>
+    	<li>Authentication: Using Basic Auth.</li>
+    	<li>Docs: Apidoc</li>
+    </ul>
+    <a href="/doc">Start using this <%= title %></a>
+    <p>2016</p>
   </body>
 </html>
